# docs/openapi/build/system_manager_reference.yaml
@@ -855,6 +855,26 @@ components:
       required:
         - username
         - password
+    userUpdate:
+      title: userUpate is a definition of User resource.
+      type: object
+      properties:
+        password:
+          type: string
+          example: password
+        password_temporary:
+          type: boolean
+          default: true
+        email:
+          type: string
+          example: user e-mail address
+        firstName:
+          type: string
+        lastName:
+          type: string
+        enabled:
+          type: boolean
+          default: true
     userCredentials:
       title: userCredentials is Credentials of User resources.
       type: object
